--- a/use-error-count-jadud-ranks-to-pred-grades.Rmd
+++ b/use-error-count-jadud-ranks-to-pred-grades.Rmd
@@ -240,15 +240,16 @@ summary(lm(Midterm1~totalRuntime_HW04+totalcompile_HW04,data = allError))
 summary(rfit(Midterm1 ~
              R_totalError_HW3+R_totalError_HW4+
              C_totalError_HW3+C_totalError_HW4,
-           data = allError))
+           data = allError, scores = bentscores3))
 #model 2 (average)
-summary(rfit(Midterm1~AvgRuntime_HW04+Avgcompile_HW04,data = allError))
+summary(rfit(Midterm1~AvgRuntime_HW04+Avgcompile_HW04,data = allError,scores = bentscores3))
 
 # model 3 (sum)
-summary(rfit(Midterm1~totalRuntime_HW04+totalcompile_HW04,data = allError))
+summary(rfit(Midterm1~totalRuntime_HW04+totalcompile_HW04,data = allError,scores = bentscores3))
 
 
 ```
+
 
 ## 4.3 predicting mid-term 2 grades
 ```{r echo=TRUE}
@@ -277,13 +278,13 @@ summary(rfit(Midterm2 ~
              C_totalError_HW3+C_totalError_HW4+
              C_totalError_HW5+C_totalError_HW6+
              C_totalError_HW7++C_totalError_HW8,
-           data = allError))
+           data = allError,scores = bentscores3))
 
 #model 2 (average)
-summary(rfit(Midterm2~AvgRuntime_HW08 + Avgcompile_HW08, data = allError))
+summary(rfit(Midterm2~AvgRuntime_HW08 + Avgcompile_HW08, data = allError,scores = bentscores3))
 
 #model 3 (sum)
-summary(rfit(Midterm2~totalRuntime_HW08 + totalcompile_HW08, data = allError))
+summary(rfit(Midterm2~totalRuntime_HW08 + totalcompile_HW08, data = allError,scores = bentscores3))
 
 
 ```
@@ -315,14 +316,67 @@ summary(rfit(Grade ~
              C_totalError_HW3+C_totalError_HW4+
              C_totalError_HW5+C_totalError_HW6+
              C_totalError_HW7++C_totalError_HW8,
-           data = allError))
+           data = allError,scores = bentscores3))
 
 #model 2 (average)
-summary(rfit(Grade~AvgRuntime_HW08 + Avgcompile_HW08, data = allError))
+summary(rfit(Grade~AvgRuntime_HW08 + Avgcompile_HW08, data = allError,scores = bentscores3))
 
 #model 3 (sum)
-summary(rfit(Grade~totalRuntime_HW08 + totalcompile_HW08, data = allError))
+summary(rfit(Grade~totalRuntime_HW08 + totalcompile_HW08, data = allError,scores = bentscores3))
 ```
+
+## 4.5 IRT using error count
+```{r}
+library("psych")
+library("ltm")
+library("irtoys")
+library("mirt")
+library("latticeExtra")
+
+df_errorCount_irt = allError
+
+df_errorCount_irt$HW3 = rowSums(df_errorCount_irt[,c("R_totalError_HW3","C_totalError_HW3")], na.rm=TRUE)
+df_errorCount_irt$HW4 = rowSums(df_errorCount_irt[,c("R_totalError_HW4","C_totalError_HW4")], na.rm=TRUE)
+df_errorCount_irt$HW5 = rowSums(df_errorCount_irt[,c("R_totalError_HW5","C_totalError_HW5")], na.rm=TRUE)
+df_errorCount_irt$HW6 = rowSums(df_errorCount_irt[,c("R_totalError_HW6","C_totalError_HW6")], na.rm=TRUE)
+df_errorCount_irt$HW7 = rowSums(df_errorCount_irt[,c("R_totalError_HW7","C_totalError_HW7")], na.rm=TRUE)
+df_errorCount_irt$HW8 = rowSums(df_errorCount_irt[,c("R_totalError_HW8","C_totalError_HW8")], na.rm=TRUE)
+
+df_errorCount_irt = df_errorCount_irt[,c(1,27:32)]
+
+# cut-off value
+
+df_errorCount_irt = melt(df_errorCount_irt)
+
+# use median to split ---
+
+df_errorCount_irt$median = ifelse(df_errorCount_irt$value<37,1,0)
+df_errorCount_irt$mean = ifelse(df_errorCount_irt$value<64,1,0)
+
+# median = 37
+df_errorCount_irt_median = dplyr::select(df_errorCount_irt,HASH_ID,variable,median) %>% spread(variable, median) %>% dplyr::select(-HASH_ID)
+
+response.frequencies(df_errorCount_irt_median)
+descript(df_errorCount_irt_median)
+
+irt.mtf = ltm(df_errorCount_irt_median ~ z1, IRT.param = TRUE)
+coef(irt.mtf)  # Obtain difficulty and discrimination parameter estimates
+
+plot(irt.mtf, type = "ICC", legend = TRUE)
+
+# mean = 64
+df_errorCount_irt_mean = dplyr::select(df_errorCount_irt,HASH_ID,variable,mean) %>% spread(variable, mean) %>% dplyr::select(-HASH_ID)
+
+
+response.frequencies(df_errorCount_irt_mean)
+descript(df_errorCount_irt_mean)
+
+irt.mtf = ltm(df_errorCount_irt_mean ~ z1, IRT.param = TRUE)
+coef(irt.mtf)  # Obtain difficulty and discrimination parameter estimates
+
+plot(irt.mtf, type = "ICC", legend = TRUE)
+```
+
 
 \newpage
 # 5 use jadud to predict mid-term 1 & 2 grades
@@ -330,7 +384,7 @@ summary(rfit(Grade~totalRuntime_HW08 + totalcompile_HW08, data = allError))
 
 ```{r import jadud csv, warning=FALSE}
 
-jadud <- read.csv("jadud.csv")
+jadud <- read.csv("jadud/jadud.csv")
 
 jadud_long <- melt(jadud, id = "X...student_id")
 
@@ -338,62 +392,112 @@ ggplot(jadud_long,aes(value,color=variable))+geom_density()+
   labs(title = "jadud density plot for each HW")+
   theme_bw()
 
-```
+jadud_runtime = read.csv("jadud/jadud-exceptions.csv")
 
-```{r}
-jadud_long %>% 
-  group_by(HW = variable) %>% 
-  summarise(Avg = round(mean(value,na.rm=T),2), Stdv = round(sd(value, na.rm = T),2)) %>% 
-  kable() %>% 
-  kable_styling(bootstrap_options = "bordered",full_width = F)
+jadud <- full_join(jadud,jadud_runtime,by = "X...student_id")
+colnames(jadud)[2:13] = 
+  c("jadud_hw_03_c","jadud_hw_04_c","jadud_hw_05_c","jadud_hw_06_c","jadud_hw_07_c","jadud_hw_08_c","jadud_hw_03_r","jadud_hw_04_r","jadud_hw_05_r","jadud_hw_06_r","jadud_hw_07_r","jadud_hw_08_r")
+
 ```
 
 \newpage
-## 5.2 use jadud EQ to predict midterm 1 grades
+## 5.2 use jadud jadud to predict midterm 1 grades
 ```{r}
 jadud_df <- left_join(midterm,jadud, by = c("HASH_ID" = "X...student_id"))
 
-jadud_df$Avg_HW04 = apply(jadud_df[c(5,6)],1,mean,na.rm=TRUE)
-jadud_df$Avg_HW08 = apply(jadud_df[c(5,10)],1,mean,na.rm=TRUE)
+#compiler
+jadud_df$Avg_c_HW04 = apply(jadud_df[c(5,6)],1,mean,na.rm=TRUE)
+jadud_df$Avg_c_HW08 = apply(jadud_df[c(5:10)],1,mean,na.rm=TRUE)
 
-jadud_df$Sum_HW04 = apply(jadud_df[c(5,6)],1,sum,na.rm=TRUE)
-jadud_df$Sum_HW08 = apply(jadud_df[c(5,10)],1,sum,na.rm=TRUE)
+jadud_df$Sum_c_HW04 = apply(jadud_df[c(5,6)],1,sum,na.rm=TRUE)
+jadud_df$Sum_c_HW08 = apply(jadud_df[c(5:10)],1,sum,na.rm=TRUE)
+
+#runtime
+jadud_df$Avg_r_HW04 = apply(jadud_df[c(11,12)],1,mean,na.rm=TRUE)
+jadud_df$Avg_r_HW08 = apply(jadud_df[c(11:16)],1,mean,na.rm=TRUE)
+
+jadud_df$Sum_r_HW04 = apply(jadud_df[c(11,12)],1,sum,na.rm=TRUE)
+jadud_df$Sum_r_HW08 = apply(jadud_df[c(11:16)],1,sum,na.rm=TRUE)
+
 ```
 
 ```{r use jadud to predict midterm 1 grade, echo=TRUE}
 # model 1 (individual)
-summary(lm(Midterm1 ~ jadud_hw_03 + jadud_hw_04, data = jadud_df))
+summary(rfit(Midterm1 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_03_r + jadud_hw_04_r, data = jadud_df))
 
 # model 2 (average)
-summary(lm(Midterm1 ~ Avg_HW04, data = jadud_df))
+summary(rfit(Midterm1 ~ Avg_c_HW04+Avg_r_HW04, data = jadud_df))
 
 # model 3 (sum)
-summary(lm(Midterm1 ~ Sum_HW04, data = jadud_df))
+summary(rfit(Midterm1 ~ Sum_c_HW04 + Sum_r_HW04, data = jadud_df))
 ```
 
-## 5.2 use jadud EQ to predict midterm 2 grades
+## 5.2 use jadud jadud to predict midterm 2 grades
 ```{r use jadud to predict midterm 2 grades}
 # model 1 (individual)
-summary(lm(Midterm2 ~ jadud_hw_03 + jadud_hw_04 + jadud_hw_05 + jadud_hw_06 + jadud_hw_07 + jadud_hw_08, data = jadud_df))
+summary(rfit(Midterm2 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c + jadud_hw_03_r + jadud_hw_04_r + jadud_hw_05_r + jadud_hw_06_r + jadud_hw_07_r + jadud_hw_08_r, data = jadud_df))
 
 # model 2 (average)
-summary(lm(Midterm2 ~ Avg_HW08, data = jadud_df))
+summary(rfit(Midterm2 ~ Avg_c_HW08 + Avg_r_HW08, data = jadud_df))
 
 # model 3 (sum)
-summary(lm(Midterm2 ~ Sum_HW08, data = jadud_df))
+summary(rfit(Midterm2 ~ Sum_c_HW08 + Sum_r_HW08, data = jadud_df))
 ```
 
-## 5.3 use jadud EQ to predict course grades
+## 5.3 use jadud to predict course grades
 ```{r use jadud to predict course grades}
 # model 1 (individual)
-summary(lm(Grade ~ jadud_hw_03 + jadud_hw_04 + jadud_hw_05 + jadud_hw_06 + jadud_hw_07 + jadud_hw_08, data = jadud_df))
+summary(rfit(Grade ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c + jadud_hw_03_r + jadud_hw_04_r + jadud_hw_05_r + jadud_hw_06_r + jadud_hw_07_r + jadud_hw_08_r, data = jadud_df))
 
 # model 2 (average)
-summary(lm(Grade ~ Avg_HW08, data = jadud_df))
+summary(rfit(Grade ~ Avg_c_HW08 + Avg_r_HW08, data = jadud_df))
 
 # model 3 (sum)
-summary(lm(Grade ~ Sum_HW08, data = jadud_df))
+summary(rfit(Grade ~ Sum_c_HW08 + Sum_r_HW08, data = jadud_df))
 ```
+
+## 5.4 use jadud to run IRT
+```{r}
+jadud_df_irt = jadud_df
+
+jadud_df_irt$HW3 = rowSums(jadud_df_irt[,c("jadud_hw_03_c","jadud_hw_03_r")], na.rm=TRUE)
+jadud_df_irt$HW4 = rowSums(jadud_df_irt[,c("jadud_hw_04_c","jadud_hw_04_r")], na.rm=TRUE)
+jadud_df_irt$HW5 = rowSums(jadud_df_irt[,c("jadud_hw_05_c","jadud_hw_05_r")], na.rm=TRUE)
+jadud_df_irt$HW6 = rowSums(jadud_df_irt[,c("jadud_hw_06_c","jadud_hw_06_r")], na.rm=TRUE)
+jadud_df_irt$HW7 = rowSums(jadud_df_irt[,c("jadud_hw_07_c","jadud_hw_07_r")], na.rm=TRUE)
+jadud_df_irt$HW8 = rowSums(jadud_df_irt[,c("jadud_hw_08_c","jadud_hw_08_r")], na.rm=TRUE)
+
+jadud_df_irt = jadud_df_irt[,c(1,25:30)] %>% melt()
+
+median(jadud_df_irt$value) #0.09
+mean(jadud_df_irt$value) #0.14
+
+jadud_df_irt$median = ifelse(jadud_df_irt$value<0.09,1,0)
+jadud_df_irt$mean = ifelse(jadud_df_irt$value<0.14,1,0)
+
+# use median to split to run IRT
+jadud_df_irt_median = dplyr::select(jadud_df_irt,HASH_ID,variable,median) %>% spread(variable, median) %>% dplyr::select(-HASH_ID)
+
+response.frequencies(jadud_df_irt_median)
+descript(jadud_df_irt_median)
+
+irt.mtf = ltm(jadud_df_irt_median ~ z1, IRT.param = TRUE)
+coef(irt.mtf)  # Obtain difficulty and discrimination parameter estimates
+
+plot(irt.mtf, type = "ICC", legend = TRUE)
+
+# use mean to split
+jadud_df_irt_mean = dplyr::select(jadud_df_irt,HASH_ID,variable,mean) %>% spread(variable, mean) %>% dplyr::select(-HASH_ID)
+
+response.frequencies(jadud_df_irt_mean)
+descript(jadud_df_irt_mean)
+
+irt.mtf = ltm(jadud_df_irt_mean ~ z1, IRT.param = TRUE)
+coef(irt.mtf)  # Obtain difficulty and discrimination parameter estimates
+
+plot(irt.mtf, type = "ICC", legend = TRUE)
+```
+
 
 \newpage
 
@@ -409,19 +513,29 @@ grade_wide <- left_join(midterm,grade_wide, by = c("HASH_ID" = "HashedId"))
 summary(lm(Midterm1 ~ HW3 + HW4, data = grade_wide))
 
 summary(rfit(Midterm1 ~ HW3 + HW4, data = grade_wide))
+
+summary(rfit(Midterm1 ~ HW3 + HW4, data = grade_wide, scores = bentscores3))
 ```
 
 ## 6.2 use HW ranks to predict midterm 2
 ```{r}
 summary(lm(Midterm2 ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide))
 
-summary(rfit(Midterm2 ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide))
+summary(rfit(Midterm2 ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide,scores = bentscores3))
 ```
 
 ## 6.3 use HW ranks to predict course grades
 ```{r}
 summary(lm(Grade ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide))
 
-summary(rfit(Grade ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide))
+summary(rfit(Grade ~ HW3+HW4+HW5+HW6+HW7+HW8, data = grade_wide,scores = bentscores3))
 ```
 
+```{r}
+
+fitF = rfit(Grade~totalRuntime_HW08 + totalcompile_HW08,
+           data = allError)
+plot(fitted.values(fitF), rstudent(fitF))
+qqnorm(residuals(fitF))
+
+```
