--- a/code/EC and jadud regression.Rmd
+++ b/code/EC and jadud regression.Rmd
@@ -112,14 +112,14 @@ allError <- left_join(midterm,df_error, by = c("HASH_ID" = "student"))
 # Error count
 ## use error count to predict midterm 1
 ```{r, echo=TRUE}
-# predict midterm1 with both compiler and runtime errors
+# predict midterm1 with only compiler errors
 summary(rfit(Midterm1 ~
-             R_totalError_HW3+R_totalError_HW4+
              C_totalError_HW3+C_totalError_HW4,
            data = allError, scores = bentscores3))
 
-# predict midterm1 with only compiler errors
+# predict midterm1 with both compiler and runtime errors
 summary(rfit(Midterm1 ~
+             R_totalError_HW3+R_totalError_HW4+
              C_totalError_HW3+C_totalError_HW4,
            data = allError, scores = bentscores3))
 
@@ -127,18 +127,18 @@ summary(rfit(Midterm1 ~
 
 ## use error count to predict midterm 2
 ```{r echo=TRUE}
-# predict midterm2 with both compiler and runtime errors
+# predict midterm2 with compiler errors
 summary(rfit(Midterm2 ~
-             R_totalError_HW3+R_totalError_HW4 +
-             R_totalError_HW5+R_totalError_HW6+
-             R_totalError_HW7+R_totalError_HW8+
              C_totalError_HW3+C_totalError_HW4+
              C_totalError_HW5+C_totalError_HW6+
              C_totalError_HW7++C_totalError_HW8,
            data = allError,scores = bentscores3))
 
-# predict midterm2 with compiler errors
+# predict midterm2 with both compiler and runtime errors
 summary(rfit(Midterm2 ~
+             R_totalError_HW3+R_totalError_HW4 +
+             R_totalError_HW5+R_totalError_HW6+
+             R_totalError_HW7+R_totalError_HW8+
              C_totalError_HW3+C_totalError_HW4+
              C_totalError_HW5+C_totalError_HW6+
              C_totalError_HW7++C_totalError_HW8,
@@ -161,29 +161,32 @@ colnames(jadud)[2:13] =
 jadud_df <- left_join(midterm,jadud, by = c("HASH_ID" = "student_id"))
 ```
 
-## use jadud  to predict midterm 1 grades
+## use jadud to predict midterm 1 grades
 ```{r use jadud to predict midterm 1 grade, echo=TRUE}
-# predict midterm1 with both compiler and runtime jadud measures
-summary(rfit(Midterm1 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_03_r + jadud_hw_04_r, data = jadud_df, scores = bentscores3))
-```
-
-```{r use jadud to predict midterm 1 grade compiler, echo=TRUE}
 # predict midterm1 with only compiler jadud measures
 summary(rfit(Midterm1 ~ jadud_hw_03_c + jadud_hw_04_c, data = jadud_df, scores = bentscores3))
 
+# predict midterm1 with both compiler and runtime jadud measures
+summary(rfit(Midterm1 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_03_r + jadud_hw_04_r, data = jadud_df, scores = bentscores3))
+
 ```
 
-## 3.2 use  jadud to predict midterm 2 grades
+## use  jadud to predict midterm 2 grades
 ```{r use jadud to predict midterm 2 grades, echo=TRUE}
-# predict midterm2 with both compiler and runtime jadud measures
-summary(rfit(Midterm2 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c + jadud_hw_03_r + jadud_hw_04_r + jadud_hw_05_r + jadud_hw_06_r + jadud_hw_07_r + jadud_hw_08_r, data = jadud_df, scores = bentscores3))
-```
-
-```{r use jadud to predict midterm 2 grades compiler, echo=TRUE}
 # predict midterm2 with only compiler jadud measures
-summary(rfit(Midterm2 ~ jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c, data = jadud_df, scores = bentscores3))
+summary(rfit(Midterm2 ~ 
+               jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + 
+               jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c, data = jadud_df, scores = bentscores3))
 
+# predict midterm2 with both compiler and runtime jadud measures
+summary(rfit(Midterm2 ~ 
+               jadud_hw_03_c + jadud_hw_04_c + jadud_hw_05_c + 
+               jadud_hw_06_c + jadud_hw_07_c + jadud_hw_08_c + 
+               jadud_hw_03_r + jadud_hw_04_r + jadud_hw_05_r + 
+               jadud_hw_06_r + jadud_hw_07_r + jadud_hw_08_r, data = jadud_df, scores = bentscores3))
 ```
+
+
 
 # HW grades
 ```{r}
