--- a/code/EC and jadud regression.Rmd
+++ b/code/EC and jadud regression.Rmd
@@ -188,6 +188,52 @@ summary(rfit(Midterm2 ~
 
 
 
+
+\newpage
+
+# RED
+```{r import RED csv, warning=FALSE}
+
+RED <- read.csv("results/repeated-error-density/RED.csv", sep = ";")
+
+colnames(RED)[2:13] =
+        c("RED_hw_03_r","RED_hw_04_r","RED_hw_05_r","RED_hw_06_r","RED_hw_07_r","RED_hw_08_r", "RED_hw_03_c","RED_hw_04_c","RED_hw_05_c","RED_hw_06_c","RED_hw_07_c","RED_hw_08_c")
+
+
+RED_df <- left_join(midterm,RED, by = c("HASH_ID" = "student"))
+```
+
+## use RED to predict midterm 1 grades
+```{r use RED to predict midterm 1 grade, echo=TRUE}
+# predict midterm1 with only compiler RED measures
+summary(rfit(Midterm1 ~ RED_hw_03_c + RED_hw_04_c, data = RED_df, scores = bentscores3))
+
+# predict midterm1 with both compiler and runtime RED measures
+summary(rfit(Midterm1 ~ RED_hw_03_c + RED_hw_04_c + RED_hw_03_r + RED_hw_04_r, data = RED_df, scores = bentscores3))
+
+```
+
+
+
+## use RED to predict midterm 2 grades
+
+```{r use RED to predict midterm 2 grades, echo=TRUE}
+# predict midterm2 with only compiler jadud measures
+summary(rfit(Midterm2 ~
+                     RED_hw_03_c + RED_hw_04_c + RED_hw_05_c +
+                             RED_hw_06_c + RED_hw_07_c + RED_hw_08_c, data = RED_df, scores = bentscores3))
+
+# predict midterm2 with both compiler and runtime jadud measures
+summary(rfit(Midterm2 ~
+                     RED_hw_03_c + RED_hw_04_c + RED_hw_05_c +
+                             RED_hw_06_c + RED_hw_07_c + RED_hw_08_c +
+                             RED_hw_03_r + RED_hw_04_r + RED_hw_05_r +
+                             RED_hw_06_r + RED_hw_07_r + RED_hw_08_r, data = RED_df, scores = bentscores3))
+```
+
+
+
+
 # HW grades
 ```{r}
 grade <- read.csv("data/grades/df_HWGrades_grade.csv") 
