--- a/code/EC jadud RED regression.Rmd
+++ b/code/EC jadud RED regression.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "error count and jadud regression"
-author: "XXX"
-date: '2023-07-08'
+title: "Regression using three error measures"
+author: "Anonymized"
+date: '2023-07-22'
 output:
   pdf_document: default
   html_document: default
